--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,12 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		jcenter()
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") 
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath(group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '4.+') 
+
 	}
 }
 
