--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,8 @@ artifactory {
   publish {
     repository {
       repoKey = 'libs-snapshot-local' // The Artifactory repository key to publish to
-      username = "${artifactory_user}" // The publisher user name
-      password = "${artifactory_password}" // The publisher password
+      username = "admin" // The publisher user name
+      password = "password" // The publisher password
       // This is an optional section for configuring Ivy publication (when publishIvy = true).
       ivy {
         ivyLayout = '[organization]/[module]/ivy-[revision].xml'
